# craftnote_scraper

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: MINIO_PRODUCTION_SETUP.md
src/craftnote_scraper/: cli.py  config.py  retry.py  scheduler.py
src/craftnote_scraper/api/: __init__.py  client.py  exceptions.py  models.py
src/craftnote_scraper/mapping/: __init__.py  models.py  wind_farms.py
src/craftnote_scraper/scraper/: __init__.py  browser.py  downloader.py  exceptions.py  login.py
src/craftnote_scraper/storage/: __init__.py  minio_adapter.py  models.py  organizer.py  tracker.py
tests/test_api/: test_client.py
tests/test_mapping/: test_wind_farms.py
tests/test_storage/: test_minio_adapter.py  test_models.py  test_organizer.py  test_tracker.py
